public static class TagManager
{
    //Animations: Start
    //Player animations propeties: Start
    public static string ANIMATION_PLAYER_JUMP_PARAMETER = "Jump";
    public static string ANIMATION_PLAYER_ATTACK_PARAMETER = "Attack";
    public static string ANIMATION_PLAYER_RUN_PARAMETER = "Running";
    public static string ANIMATION_PLAYER_DOUBLE_JUMP_PARAMETER = "DoubleJump";
    public static string ANIMATION_PLAYER_JUMP_ATTACK_PARAMETER = "JumpAttack";
    public static string ANIMATION_PLAYER_DEATH_PARAMETER = "Death";
    //Player animations propeties:End

    //Player animations: Start
    public static string ANIMATION_PLAYER_JUMP = "Jump";
    public static string ANIMATION_PLAYER_ATTACK = "Run Attack";
    public static string ANIMATION_PLAYER_RUN = "Run";
    public static string ANIMATION_PLAYER_DOUBLE_JUMP = "Double Jump";
    public static string ANIMATION_PLAYER_JUMP_ATTACK = "Jump Attack";
    public static string ANIMATION_PLAYER_DEATH = "Death";   
    public static string ANIMATION_PLAYER_FALL = "Fall";
    //Player animations: End
    //Enemy animations: Start
    public static string ANIMATION_ENEMY_ATTACK_TRIGGER = "AttackTrigger";
    public static string ANIMATION_ENEMY_DEATH_PARAMETER = "Death";
    //Enemy animations: End
    //Animations: End

    //GameTag: Start
    public static string TAG_PLAYER = "Player";
    public static string TAG_GROUND = "Ground";
    public static string TAG_TREE_1 = "Tree1";
    public static string TAG_TREE_2 = "Tree2";
    public static string TAG_ENEMY = "Enemy";
    public static string TAG_OBSTACLE = "Obstacle";
    public static string TAG_HEALTH = "Health";
    public static string TAG_GAMEPLAY_CONTROLLER = "GameplayController";
    public static string TAG_MAIN_CAMERA = "MainCamera";
    //GameTag: End

    //Scenes name: Start
    public static string SCENE_NAME_GAMEPLAY = "Gameplay";
    public static string SCENE_NAME_MAIN_MENU = "MainMenu";
    //Scenes name: End

    //Characters names(in gameplay scene): Start
    public static string PLAYER_NORMAL = "Slash Panda Normal";
    public static string PLAYER_RED = "Slash Panda Red";
    public static string PLAYER_BLUE = "Slash Panda Blue";
    //Characters names(in gameplay scene): End

    //Game Data: Start
    public static string DATA_CHARACTER = "Character";
    public static string DATA_SELECTED_CHARACTER = "Selected Character";
    public static string DATA_HIGHSCORE = "Highscore";
    public static string DATA_INITIALIZED = "Data Initialized";
    public static string DATA_SOUND_PLAY = "Sound Play";
    //Game Data: End
}